# Auto-docx

./: .gitignore  README.md  example_run.sh  pyproject.toml
auto_documentation/: config.py  custom_exceptions.py  custom_types.py  main.py  secrets.toml.example  setting.toml  utils.py
auto_documentation/convert_to_file/: to_pdf.py  to_word.py
auto_documentation/example_scripts/: process_prompts.py
auto_documentation/markdown_converter/: compare_html_nodes.py  html_validator.py  markdown.py
auto_documentation/prompt_builder/: prompt_builder.py  prompt_parser.py  prompts.py
auto_documentation/test_runner/: test_collector.py  test_runner.py
auto_documentation/ticket_ingestion/: jira_main.py  notion_main.py  ticket_ingestor_base.py
auto_documentation/ticket_ingestion/configs/: jira_config.py  ticket_tree.py
tests/: html_validator_test.py  large_markdown_file.md  markdown_test.py
tests/test_data/: example_config.yaml  example_jira_return.json  example_markdown.md  example_prompt_output.json  jira_input.json  large_markdown_file.md  simple.html  test.html
tests/test_data/example_data/: example.jsonl
tests/test_data/example_test_folder/: test_MBA-14.py
