[project]
name = "auto-documentation"
version = "0.1.0"
description = ""
authors = [
    {name = "pb-96",email = "philip.byrne@faculty.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx (>=1.1.2,<2.0.0)",
    "pdfservices-sdk (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
