[project]
name = "auto-documentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx (>=1.1.2,<2.0.0)",
    "shell (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "docx (>=0.2.4,<0.3.0)",
    "jira (>=3.8.0,<4.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
